	* Ability to set personal details for an account and for buddies in the
	  buddylist.

	MSN:
	* Add support for receiving handwritten (ink) messages on MSN.
	* Add support for receiving audio clips on MSN.
	* Show the invite message for buddies that requested authorization
	  from you on MSN.
	* Support sending an invite message to buddies when requesting authorization
	  from them on MSN.

	Pidgin:
	* Added -f command line option to tell Pidgin to ignore NetworkManager
	  and assume it has a valid network connection.
	* Allow plugins to specify custom link types to the GtkIMHtml widget.
	* The status message input box at the bottom of the buddy list expands
	  correctly when starting a new line of text.
	* Pressing the Enter key in the message entry box of the New Status
	  dialog and various other dialogs now causes the cursor to move to
	  the next line.
	* Created a unified Buddy Pounce notification window for all pounces
	  where "Pop up a notification" is selected, which avoids having a
	  new dialog box every time a pounce is triggered. (Jorge Villaseñor)
	* The New Account dialog is now broken into three tabs.  Proxy
	  configuration has been moved from the Advanced tab to the new tab.
	* Dragging a buddy onto a chat pops up a chat-invitation dialog.
	  (Carlos Bederian)
	* The nicks of the persons who leave the chatroom are italicized in the
	  chat's conversation history. The nicks are un-italicized when they
	  rejoin.
	* Always set unseen-count and unseen-state on conversations.
	  (Joshua Stein)
	* Fix a bug in 'Conversation Colors' plugin for RTL messages.
	* Pressing the Left and Right arrow keys in the buddy list will expand and
	  collapse buddy groups or contacts. (Peter Ruibal)
	* Support saving animated custom smileys as animated images or animated
	  custom smileys. (Andrea Piccinelli)
	* Support for keyboard navigation on the status icon. (Li Yuan)
	* IMG tags without 'id' attributes are turned into links to the image URL.
	  (Dmitry Petroff)